--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -7,4 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - uses: wtnb75/actions/python@main
+      with:
+        pipinstall: "-r requirements.txt -r requirements-dev.txt"
     - uses: wtnb75/actions/pytest@main
