--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,75 @@
 version: "3"
 
 services:
+  top:  # http://localhost:8080
+    image: traefik:v3.0
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+    ports:
+      - "8080:80/tcp"
+    command:
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+      - "--tracing.opentelemetry=true"
+      - "--tracing.opentelemetry.grpc=true"
+      - "--tracing.opentelemetry.address=otel-collector:4317"
+      - "--tracing.opentelemetry.insecure=true"
+      - "--api=true"
+      - "--api.insecure=true"
+      - "--accesslog=true"
   otel-collector:
     image: otel/opentelemetry-collector
     command:
       - "--config=/etc/otel-collector-config.yaml"
     volumes:
       - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
-    ports:
-      - "4317:4317"
-      - "4318:4318"
-  zipkin:  # http://localhost:9411
+    #ports:
+    #  - "4317:4317"
+    #  - "4318:4318"
+  zipkin:  # http://localhost:8080/zipkin
     image: openzipkin/zipkin
-    ports:
-      - "9411:9411"
-  jaeger:  # http://localhost:16686
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.services.zipkin.loadbalancer.server.port=9411"
+      - "traefik.http.routers.zipkin.rule=PathPrefix(`/zipkin`)"
+      - "traefik.http.routers.zipkin.entrypoints=web"
+    #ports:
+    #  - "9411:9411"
+  jaeger:  # http://localhost:8080/jaeger
     image: jaegertracing/all-in-one
-    ports:
-      - "5775:5775/udp"
-      - "6831:6831/udp"
-      - "6832:6832/udp"
-      - "5778:5778"
-      - "16686:16686"
-      - "14268:14268"
-  qrgen-otel:   # http://localhost:3000/docs
+    command:
+      - --query.base-path
+      - /jaeger
+      - --memory.max-traces
+      - "10000"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.services.jaeger.loadbalancer.server.port=16686"
+      - "traefik.http.routers.jaeger.rule=PathPrefix(`/jaeger`)"
+      - "traefik.http.middlewares.jaeger.stripprefix.prefixes=/jaeger"
+      - "traefik.http.routers.jaeger.entrypoints=web"
+      - "traefik.http.routers.jaeger.middlewares=jaeger"
+    #ports:
+    #  - "5775:5775/udp"
+    #  - "6831:6831/udp"
+    #  - "6832:6832/udp"
+    #  - "5778:5778"
+    #  - "16686:16686"
+    #  - "14268:14268"
+  qrgen-otel:   # http://localhost:8080/qrgen-otel/docs
     image: ghcr.io/wtnb75/qrgen-otel
     build:
       dockerfile: Dockerfile.otel
-    ports:
-      - "3000:3000/tcp"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.services.qrgenotel.loadbalancer.server.port=3000"
+      - "traefik.http.routers.qrgenotel.rule=PathPrefix(`/qrgen-otel`)"
+      - "traefik.http.middlewares.qrgenotel.stripprefix.prefixes=/qrgen-otel"
+      - "traefik.http.routers.qrgenotel.entrypoints=web"
+      - "traefik.http.routers.qrgenotel.middlewares=qrgenotel"
+    #ports:
+    #  - "3000:3000/tcp"
     entrypoint:
       - opentelemetry-instrument
       - --traces_exporter
@@ -50,15 +91,26 @@ services:
       - 0.0.0.0
       - --port
       - "3000"
-  qrgen:   # http://localhost:3001/docs
+      - "--root-path"
+      - "/qrgen-otel"
+  qrgen:   # http://localhost:8080/qrgen
     image: ghcr.io/wtnb75/qrgen
     build:
       dockerfile: Dockerfile
-    ports:
-      - "3001:3001/tcp"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.services.qrgen.loadbalancer.server.port=3000"
+      - "traefik.http.routers.qrgen.rule=PathPrefix(`/qrgen`)"
+      - "traefik.http.middlewares.qrgen.stripprefix.prefixes=/qrgen"
+      - "traefik.http.routers.qrgen.entrypoints=web"
+      - "traefik.http.routers.qrgen.middlewares=qrgen"
+    #ports:
+    #  - "3001:3001/tcp"
     command:
       - server
       - --host
       - 0.0.0.0
       - --port
-      - "3001"
+      - "3000"
+      - "--root-path"
+      - "/qrgen"
